# Doom64EX-Plus

./: .gitignore  AUTHORS  CHANGELOG.md  CMakeLists.txt  COPYING  DOOM64EX+.6  DOOM64EX+.desktop  DOOM64EX+.wad  Makefile  README.md  doom64ex-plus.6  doom64ex-plus.desktop  doom64ex-plus.wad  pistolaccurate.deh
AppImage/: DOOM64EX-Plus.desktop  Dockerfile  SDL3-devel-3.2.16-0.aarch64.rpm  SDL3-devel-3.2.16-0.x86_64.rpm  build.sh  libSDL3-0-3.2.16-0.aarch64.rpm  libSDL3-0-3.2.16-0.x86_64.rpm  run-in-docker.sh
Setup/: Setup.aip  Setup.aiproj
Windows/: DOOM64.sln  Doom64EX+ Launcher.vcxproj  Doom64EX+ Launcher.vcxproj.filters  Doom64EX+.sln  Doom64EX+.vcxproj  Doom64EX+.vcxproj.filters  Doom64EX-Plus Launcher.vcxproj  Doom64EX-Plus Launcher.vcxproj.filters  Doom64EXPlus.sln  Doom64EXPlus.vcxproj  Doom64EXPlus.vcxproj.filters  launcher.cfg  vcpkg-configuration.json  vcpkg.json
Windows/SDL3-3.2.24/: .git-hash
Windows/SDL3-3.2.24/cmake/: SDL3Config.cmake  SDL3ConfigVersion.cmake
XCode/: DOOM64EX--Info.plist
XCode/DOOM64EXPlus.xcodeproj/: project.pbxproj
XCode/DOOM64EXPlus.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
XCode/Libs/: libFLAC.8.dylib  libSDL2-2.0.0.dylib  libSDL2_net-2.0.0.dylib  libfluidsynth.3.1.1.dylib  libfluidsynth.3.dylib  libglib-2.0.0.dylib  libgthread-2.0.0.dylib  libiconv.2.dylib  libintl.8.dylib  libncurses.6.dylib  libogg.0.dylib  libopus.0.dylib  libpcre.1.dylib  libpng16.16.dylib  libreadline.8.1.dylib  libreadline.8.dylib  libsndfile.1.0.34.dylib  libsndfile.1.dylib  libvorbis.0.dylib  libvorbisenc.2.dylib  libvorbisfile.3.dylib  libz.1.2.13.dylib
Xbox/: Doom64EX+.sln  Doom64EX+.vcproj  fakeglx01.cpp  fakeglx01.h  fakeglx_ex+.c  fakeglx_ex+.h
Xbox/Release/: BuildLog.htm
backend/cglm/: meson.build
backend/cglm/win/: cglm-test.vcxproj  cglm-test.vcxproj.filters  cglm.vcxproj  cglm.vcxproj.filters
building_special_configs/: build_aarch64.sh  build_freebsd.sh  build_openbsd.sh  build_rpi3_raspbian.sh
demos/: speedrun_penumbra_beta61_any_percent_bg_35_00.lmp  speedrun_penumbra_beta61_any_percent_bg_48_00.lmp
docs/: AUTHORS  AUTHORS-OLD.txt  CHANGELOG  Cheats.txt  ConsoleCmds.txt  Devparm.txt  Parameters.txt  README-VITA.md  Readme-old.txt
docs/HTML/: GameSpec.htm  Index.htm  Level Editing.htm  Linedef.htm  Macros.htm  Sector.htm  Template.htm  Thing.htm  Tutorial.htm
engine/: DOOM64EX+.rc  Makefile.ns  Makefile.vita  am_draw.c  am_draw.h  am_map.c  am_map.h  build.sh  build_aarch64.sh  build_freebsd.sh  build_openbsd.sh  build_rpi3_raspbian.sh  con_console.c  con_console.h  con_cvar.c  con_cvar.h  d_devstat.c  d_englsh.h  d_event.h  d_iwad.c  d_main.c  d_main.h  d_net.c  d_net.h  d_player.h  d_think.h  d_ticcmd.h  defconfig.inc  deh_ammo.c  deh_defs.h  deh_doom.c  deh_io.c  deh_main.c  deh_main.h  deh_mapping.c  deh_mapping.h  deh_misc.c  deh_str.c  deh_str.h  deh_thing.c  (+153 more)
engine/backend/: imgui.rar
launcher/: Launcher.c  Launcher.rc  resource.h  tk_lib.c
modding/: d64.deh  dehacked.txt  things.deh
modding/DeHackED64/: dehacked64.txt
modding/DeHackED64/misc/: misc.deh
modding/DeHackED64/states/: fastarachnotronattack.deh  fastbfg.deh  fastcacoattack.deh  fastchain.deh  fastknightattack.deh  fastlaser.deh  fastmancattack.deh  fastpistol.deh  fastsargeantattack.deh  fastsaw.deh  fastsgun.deh  fastssg.deh  frames.txt
modding/DeHackED64/things/: things.deh
modding/DeHackED64/weapons/: infinite_ammo.deh
src/engine/: DOOM64EX+.APS  Doom64EXPlus.velf  Makefile.ns  Makefile.vita  am_draw.c  am_draw.h  am_map.c  am_map.h  build.sh  build_aarch64.sh  build_freebsd.sh  build_macos.sh  build_openbsd.sh  build_rpi3_raspbian.sh  build_switch.sh  build_win_cross.sh  con_console.c  con_console.h  con_cvar.c  con_cvar.h  d_devstat.c  d_devstat.h  d_englsh.h  d_event.h  d_iwad.c  d_keywds.h  d_main.c  d_main.h  d_net.c  d_net.h  d_player.h  d_think.h  d_ticcmd.h  d_utils.c  d_utils.h  defconfig.inc  deh_ammo.c  deh_defs.h  deh_doom.c  deh_frame.c  (+195 more)
src/engine/Doom64EXPlus/: Doom64EXPlus.sln  Doom64EXPlus.vcxproj  Doom64EXPlus.vcxproj.filters
src/engine/GLSL/: README.md  test.frag  test.vert
src/launcher/: Launcher.aps  Launcher.c  Launcher.h  Launcher.rc  Launcher.res  build_win_cross.sh  iup_launcher.c  iup_launcher.h  resource.h  tk_lib.c  tk_lib.h
src/launcher/Doom64EX-Plus Launcher/: Doom64EX-Plus Launcher.sln  Doom64EX-Plus Launcher.vcxproj  Doom64EX-Plus Launcher.vcxproj.filters  framework.h
tools/: tools.sln
tools/KexLIB/: .gitignore  README.md  kexlib.cpp  kexlib.h  kexlib.hpp
tools/KexLIB/framework/: array.h  binFile.cpp  binFile.hpp  cachefilelist.h  cmd.cpp  cmd.h  cvar.cpp  cvar.hpp  defs.cpp  defs.h  fileSystem.cpp  filesystem.h  filesystem.hpp  getter.h  inputSystem.hpp  keyinput.cpp  keyinput.hpp  keymap.cpp  keymap.h  kstring.cpp  kstring.hpp  linkedlist.hpp  memHeap.cpp  memHeap.h  object.cpp  object.hpp  parser.cpp  parser.hpp  resourceManager.hpp  system.cpp  system.hpp
tools/KexLIB/math/: angle.cpp  bounds.cpp  mathlib.cpp  mathlib.h  mathlib.hpp  matrix.cpp  plane.cpp  pluecker.cpp  quaternion.cpp  random.cpp  vector.cpp
tools/Wadgen/: .gitignore  CMakeLists.txt  LICENSE  README.md
tools/Wadgen/Windows/: Wadgen.sln  Wadgen.vcxproj  Wadgen.vcxproj.filters
tools/Wadgen/docs/: AUTHORS
tools/Wadgen/res/apple/: icon.icns  wadgen-launch.sh
tools/Wadgen/src/: CMakeLists.txt  MD5.c  MD5.h  wadgen.c  wadgen.h
tools/blam/: blam.sln  blam.vcxproj  blam.vcxproj.filters  common.c  common.h  macro.c  macro.h  main.c  parse.c  parse.h  script.c  script.h  types.h
tools/d64bsp/: analyze.c  blockmap.c  d64bsp.sln  d64bsp.vcxproj  d64bsp.vcxproj.filters  display.c  glbsp.h  level.c  level.h  main.c  node.c  seg.c  structs.h  system.c  system.h  util.c  util.h  wad.c  wad.h
tools/d64bsp/docs/: AUTHORS
tools/dlight-plus/: README.md  common.h  lightSurface.cpp  lightSurface.h  lightmap.cpp  lightmap.h  main.cpp  mapData.cpp  mapData.h  surfaces.cpp  surfaces.h  trace.cpp  trace.h  wad.cpp  wad.h  worker.cpp  worker.h
tools/dlight-plus/kexlib/: array.h  binFile.cpp  binFile.h  kstring.cpp  (+5 more)
(+59 files in other folders)
